--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <header class="welcome-header">
-        <h1 class="welcome-header__title">Welcome to kookoo Clone</h1>
+        <h1 class="welcome-header__title">Welcome to KookooTalk</h1>
         <p class="welcome-header__text">
             If you have a kookoo Account, login with your email or phone number.
         </p>
