--- a/friends.html
+++ b/friends.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Kookoo Talk</title>
+    <title>Friends - Kookoo Talk</title>
 </head>
 <body>
     <div class="status-bar">
@@ -23,19 +23,22 @@
         </div>
     </div>
 
-    <header class="welcome-header">
-        <h1 class="welcome-header__title">Welcome to KookooTalk</h1>
-        <p class="welcome-header__text">
-            If you have a kookoo Account, login with your email or phone number.
-        </p>
-    </header>
-
-    <form action="friends.html" method="get" id="login-form">
-        <input name="username" type="text" placeholder="Email or phone number">
-        <input name="password" type="password" placeholder="password">
-        <input type="submit" value="Log In">
-        <a href="#">Fine kookoo Account or Password</a>
-    </form>
+    <nav class="nav">
+        <ul class="nav__list">
+            <li class="nav__btn">
+                <a class="nav__link" href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a>
+            </li>
+            <li class="nav__btn">
+                <a class="nav__link" href="#"><i class="fa-regular fa-comment fa-2x"></i>
+                </li>
+            <li class="nav__btn">
+                <a class="nav__link" href="#"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
+            </li>
+            <li class="nav__btn">
+                <a class="nav__link" href="#"><i class="fa-solid fa-ellipsis fa-2x"></i></a>
+            </li>
+        </ul>
+    </nav>
 
     <script src="https://kit.fontawesome.com/9edafc56c3.js" crossorigin="anonymous"></script>
 </body>
