--- a/friends.html
+++ b/friends.html
@@ -25,20 +25,20 @@
 
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav__btn">
-                <a class="nav__link" href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a>
-            </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="#"><i class="fa-regular fa-comment fa-2x"></i>
-                </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="#"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
-            </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="#"><i class="fa-solid fa-ellipsis fa-2x"></i></a>
-            </li>
+          <li class="nav__btn">
+            <a class="nav__link" href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a>
+          </li>
+          <li class="nav__btn">
+            <a class="nav__link" href="#"><i class="fa-regular fa-comment fa-2x"></i></a>
+          </li>
+          <li class="nav__btn">
+            <a class="nav__link" href="#"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
+          </li>
+          <li class="nav__btn">
+            <a class="nav__link" href="#"><i class="fa-solid fa-ellipsis fa-2x"></i></a>
+          </li>
         </ul>
-    </nav>
+      </nav>
 
     <script src="https://kit.fontawesome.com/9edafc56c3.js" crossorigin="anonymous"></script>
 </body>
