--- a/chats.html
+++ b/chats.html
@@ -24,48 +24,27 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Friends</h1>
+      <h1 class="screen-header__title">Chats</h1>
       <div class="screen-header__icons">
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
+        <span><i class="fa-solid fa-comment-medical fa-lg"></i></span>
         <span><i class="fa-solid fa-music fa-lg"></i></span>
         <span><i class="fa-solid fa-gear fa-lg"></i></span>
       </div>
     </header>
 
-    <a id="friends-display-link">
-      <i class="fa-solid fa-circle-info"></i>Friend's Names Display
-      <i class="fa-solid fa-chevron-right fa-xs"></i>
-    </a>
-
 <main class="main-screen">
   <div class="user-component">
     <div class="user-component__column">
-      <img src="img/reva.JPG" class="user-component__avatar user-component__avatar--xl">
+      <img src="img/reva.JPG" class="user-component__avatar user-component__avatar">
       <div class="user-component__text">
         <h4 class="user-component__title">Jun</h4>
-        <!-- <h6 class="user-component__subtitle">this is apple</h6> -->
+        <h6 class="user-component__subtitle">Please check My Kookoo Account info</h6>
       </div>
     </div>
-    <div class="user-component__column"></div>
-  </div>
-  <div class="friends-screen__channel">
-    <div class="friends-screen__channel-header">
-      <span>Channel</span>
-      <i class="fa-solid fa-chevron-up fa-xs"></i>
-    </div>
-    <div class="user-component">
-      <div class="user-component__column">
-        <img src="img/reva.JPG" class="user-component__avatar user-component__avatar--sm">
-        <div class="user-component__text">
-          <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
-        </div>
-      </div>
-      <div class="user-component__column">
-        <div> <!--div를 하나 더 씌움으로써 flex의 영향을 받지 않게 함-->
-          <span>2</span>
-          <i class="fa-solid fa-chevron-right fa-xs"></i>
-        </div>
-      </div>
+    <div class="user-component__column">
+        <span class="user-component__time">22:43</span>
+        <div class="badge">1</div>
     </div>
   </div>
 </main>
@@ -73,12 +52,12 @@
     <nav class="nav">
         <ul class="nav__list">
           <li class="nav__btn">
-            <a class="nav__link" href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a>
+            <a class="nav__link" href="friends.html"><i class="fa-regular fa-user fa-2x"></i></a>
           </li>
           <li class="nav__btn">
             <a class="nav__link" href="chats.html">
                 <span class="nav__notification badge">1</span>
-                <i class="fa-regular fa-comment fa-2x"></i></a>
+                <i class="fa-solid fa-comment fa-2x"></i></a>
           </li>
           <li class="nav__btn">
             <a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
