--- a/chats.html
+++ b/chats.html
@@ -64,7 +64,7 @@
           </li>
           <li class="nav__btn">
             <a href="more.html" class="nav__link">
-            <span class="nav__alim"></span>
+            <div class="point"></div>
             <i class="fa-solid fa-ellipsis fa-2x"></i></a>
           </li>
         </ul>
