--- a/find.html
+++ b/find.html
@@ -34,20 +34,20 @@
     </header>
 
 <main class="main-screen">
-  <div class="find-icons">
-    <div class="find-icons-icon">
+  <div class="icon-row">
+    <div class="icon-row-icon">
       <i class="fa-solid fa-qrcode"></i>
       <span>QR Code</span>
     </div>
-    <div class="find-icons-icon">
+    <div class="icon-row-icon">
       <i class="fa-regular fa-address-book"></i>
       <span>Add by Contacts</span>
     </div>
-    <div class="find-icons-icon">
+    <div class="icon-row-icon">
       <i class="fa-solid fa-fingerprint"></i>
       <span>Add by ID</span>
     </div>
-    <div class="find-icons-icon">
+    <div class="icon-row-icon">
       <i class="fa-regular fa-envelope"></i>
       <span>Invite</span>
     </div>
