setting clear->chat

--- a/more.html
+++ b/more.html
@@ -30,7 +30,8 @@
         <span><i class="fa-solid fa-music fa-lg"></i></span>
         <span>
             <div class="point"></div>
-            <i class="fa-solid fa-gear fa-lg"></i>
+            <a href="settings.html">
+            <i class="fa-solid fa-gear fa-lg"></i></a>
         </span>
       </div>
     </header>
