--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friends - Kookoo Talk</title>
+    <title>Settings - Kookoo Talk</title>
 </head>
 <body>
     <div class="status-bar">
@@ -23,33 +23,45 @@
         </div>
     </div>
 
-    <header class="screen-header">
-      <h1 class="screen-header__title">Chats</h1>
-      <div class="screen-header__icons">
+    <header class="alt-header">
+      <div class="alt-header__column">
+        <a href="more.html">
+          <i class="fa-solid fa-chevron-left fa-lg"></i>
+        </a>
+      </div>
+      <div class="alt-header__column">
+        <div class="alt-header__title">Settings</div>
+      </div>
+      <div class="alt-header__column">
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
-        <span><i class="fa-solid fa-comment-medical fa-lg"></i></span>
-        <span><i class="fa-solid fa-music fa-lg"></i></span>
-        <span><i class="fa-solid fa-gear fa-lg"></i></span>
       </div>
     </header>
 
-<main class="main-screen">
-  <a href="chat.html">
-    <div class="user-component">
-      <div class="user-component__column">
-        <img src="img/reva.JPG" class="user-component__avatar user-component__avatar">
-        <div class="user-component__text">
-          <h4 class="user-component__title">Jun</h4>
-          <h6 class="user-component__subtitle">Please check My Kookoo Account info</h6>
+  <main class="main-screen">
+    <ul class="settings-list">
+      <li class="settings__setting">
+        <div class="settings__setting-column">
+          <i class="fa-solid fa-bullhorn"></i>
+          <span>Notices</span>
         </div>
-      </div>
-      <div class="user-component__column">
-          <span class="user-component__time">22:43</span>
-          <div class="badge">1</div>
-      </div>
-    </div>
-  </a>
-</main>
+        <div class="settings__setting-column"></div>
+      </li>
+      <li class="settings__setting">
+        <div class="settings__setting-column">
+          <i class="fa-solid fa-flask"></i>
+          <span>Kookoo Lab</span>
+        </div>
+        <div class="settings__setting-column"></div>
+      </li>
+      <li class="settings__setting">
+        <div class="settings__setting-column">
+          <i class="fa-solid fa-circle-info"></i>
+          <span>Version</span>
+        </div>
+        <div class="settings__setting-column">Latest Version</div>
+      </li>
+    </ul>
+  </main>
 
     <nav class="nav">
         <ul class="nav__list">
@@ -59,7 +71,7 @@
           <li class="nav__btn">
             <a class="nav__link" href="chats.html">
                 <span class="nav__notification badge">1</span>
-                <i class="fa-solid fa-comment fa-2x"></i></a>
+                <i class="fa-regular fa-comment fa-2x"></i></a>
           </li>
           <li class="nav__btn">
             <a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
