--- a/chat.html
+++ b/chat.html
@@ -38,7 +38,42 @@
       </div>
     </header>
 
+    <main class="maun-screen main-chat">
+      <div class="chat__timestamp">
+        2023년.6.11.일
+      </div>
+      <div class="message-row">
+        <img src="img/reva.JPG">
+        <div class="message-row__content">
+          <span class="message__author">Jun</span>
+          <div class="message__info">
+            <span class="message__bubble">바늘을 철로 만들면 안되는 이유</span>
+            <span class="message__time">22:43</span>
+          </div>
+        </div>
+      </div>
+      <div class="message-row message-row--own">
+        <div class="message-row__content">
+          <div class="message__info">
+            <span class="message__bubble">Needle은 iron거 하지마라</span>
+            <span class="message__time">22:43</span>
+          </div>
+        </div>
+      </div>
+    </main>
 
+    <form class="reply">
+      <div class="reply__column">
+        <i class="fa-regular fa-square-plus fa-lg"></i>
+      </div>
+      <div class="reply__column">
+        <input type="text" placeholder="메세지를 작성해 주세요">
+        <i class="fa-regular fa-face-smile fa-lg"></i>
+        <button>
+          <i class="fa-solid fa-arrow-up"></i>
+        </button>
+      </div>
+    </form>
 
     <script src="https://kit.fontawesome.com/9edafc56c3.js" crossorigin="anonymous"></script>
 </body>
