--- a/friends.html
+++ b/friends.html
@@ -90,6 +90,13 @@
           </li>
         </ul>
       </nav>
+      <div class="splash-screen">
+        <i class="fa-solid fa-comment"></i>
+      </div>
+
+      <div id="no-mobile">
+        <span>Your screen is too big</span>
+      </div>
 
     <script src="https://kit.fontawesome.com/9edafc56c3.js" crossorigin="anonymous"></script>
 </body>
