--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         <a href="#">Fine kookoo Account or Password</a>
     </form>
 
+    <div id="no-mobile">
+        <span>Your screen is too big</span>
+      </div>
+
     <script src="https://kit.fontawesome.com/9edafc56c3.js" crossorigin="anonymous"></script>
 </body>
 </html>
